--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ body {
   margin-top: 40px;
   margin-left: -40px;
 }
+#profile {
+  background: rgba(255,255,255,0.05);   /* lighter tone */
+  padding: 40px 0;
+  border-radius: 10px;
+  width: 80%;
+  margin: 0 auto;
+}
 /* === Header === */
 header {
   background: #000000;
