--- a/style.css
+++ b/style.css
@@ -168,10 +168,13 @@ section {
 }
 
 .image-box {
+  width: 100%;
+  height: 100%;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 #modal-img {
