--- a/style.css
+++ b/style.css
@@ -248,14 +248,14 @@ body.modal-open {
 }
 
 .contact-link {
-  color: #000000; /* black text */
+  color: #ffffff; /* black text */
   font-weight: 500;
   text-decoration: none; /* no underline */
 }
 
 /* Hover removed, link stays black */
 .contact-link:hover {
-  color: #000000 !important;
+  color: #ffffff !important;
   text-decoration: none !important;
 }
 
