--- a/style.css
+++ b/style.css
@@ -30,6 +30,25 @@ body, html {
   width: 80%;
   margin: 0 auto;
 }
+#profile-contact {
+  margin-top: 15px;
+}
+
+#profile-contact .contact-line {
+  font-size: 16px;
+  margin: 6px 0;
+}
+
+#profile-contact .contact-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+#profile-contact .contact-link:hover {
+  text-decoration: underline;
+}
+
 
 /* === Header === */
 header {
