--- a/style.css
+++ b/style.css
@@ -244,20 +244,21 @@ section {
 }
 
 #modal-img {
-  max-width: 80vw;
-  max-height: 60vh;
+  max-width: 70vw;
+  max-height: 70vh;
   object-fit: contain;
-  border-radius:8px;
+  border-radius: 8px;
   display: block;
-  margin: 0 auto 20px auto;
+  margin: auto;
 }
-
 
 @media (max-width: 600px) {
-  .modal-content img {
-    max-width: 250px;   /* ✅ smaller on phones */
+  #modal-img {
+    max-width: 90vw;
+    max-height: 60vh;
   }
 }
+
 
 
 
